apps/backend/demo/patches/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails
  annotations:
spec:
  tls:
    - hosts:
        - api.demo.jakubkubacki.com
      secretName: rails-tls
  rules:
    - host: api.demo.jakubkubacki.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rails
                port:
                  number: 3000
